--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ layout: default
                     </div>
 
                     <div class="label-card">
+                    {% include 1category.html %}
                     {% include category.html %}
                     </div>
 
