--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: default
 <div class="page clearfix" index>
     <div class="left">
         <h1>Welcome to STOGQY's Blog!</h1>
-        <small>这里记录着我的生物学习之路</small>
+        <small>-Hey-</small>
         <hr>
         <ul>
             {% for post in paginator.posts %}
